# party

./: .gitignore  bun.lockb  mydict.dic  package-lock.json  package.json  tsconfig.json
src/: App.vue  const.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/cache/: 20231023.txt
src-tauri/examples/: find_nearest_events.rs  forward_date.rs  parse_datetime.rs  scraping.rs  shiromado_sorter.rs
src-tauri/src/: lib.rs  main.rs  scraping.rs  shiromado.rs
src/components/: AppConfiguration.vue  EventList.vue  Greet.vue
