[package]
name = "party"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
reqwest = { version = "0.11.22", features = ["cookies", "multipart"] }
tokio = { version = "1.33.0", features = ["full"] }
scraper = "0.17.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
